[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Journal/Journal.gd" type="Script" id=2]
[ext_resource path="res://src/UI/CharacterSheetSubpages/Journal/JournalEntries.gd" type="Script" id=3]

[node name="Journal" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Entries" type="ScrollContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1010.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JournalEntries" type="VBoxContainer" parent="Entries" groups=["Persist"]]
margin_right = 1920.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 1014.0
margin_right = 1920.0
margin_bottom = 1080.0
alignment = 1

[node name="NewEntry" type="Button" parent="HBoxContainer"]
margin_left = 758.0
margin_right = 958.0
margin_bottom = 66.0
rect_min_size = Vector2( 200, 66 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "New Entry"
icon_align = 1

[node name="RemoveLastEntry" type="Button" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1162.0
margin_bottom = 66.0
rect_min_size = Vector2( 200, 66 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Remove Last Entry"
icon_align = 1

[connection signal="button_up" from="HBoxContainer/NewEntry" to="." method="_on_NewEntry_button_up"]
[connection signal="button_up" from="HBoxContainer/RemoveLastEntry" to="." method="_on_RemoveLastEntry_button_up"]
